# strava-komoot

./: .env.example  .gitignore  PLAN.md  SESSION_STATE.md  opencode.json  pyproject.toml
docs/: reverse-engineer-komoot-photo-upload.md
src/strava_komoot/: config.py  db.py  diff.py  gpx.py  komoot.py  strava.py  sync.py  web.py
src/strava_komoot/templates/: index.html
tests/: conftest.py  test_db.py  test_diff.py  test_gpx.py  test_sport_map.py
